test/integration/bad/reserved/stanc.expected
  $ ../../../../../install/default/bin/stanc auto.stan
Semantic error in 'auto.stan', line 2, column 7 to column 11:
   -------------------------------------------------
     1:  data {
     2:    real auto;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'auto' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc break.stan
Syntax error in 'break.stan', line 2, column 7 to column 12, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real break;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'break' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc cholesky_factor_corr.stan
Syntax error in 'cholesky_factor_corr.stan', line 2, column 7 to column 27, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real cholesky_factor_corr;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'cholesky_factor_corr' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc cholesky_factor_cov.stan
Syntax error in 'cholesky_factor_cov.stan', line 2, column 7 to column 26, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real cholesky_factor_cov;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'cholesky_factor_cov' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc continue.stan
Syntax error in 'continue.stan', line 2, column 7 to column 15, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real continue;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'continue' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc corr_matrix.stan
Syntax error in 'corr_matrix.stan', line 2, column 7 to column 18, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real corr_matrix;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'corr_matrix' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc cov_matrix.stan
Syntax error in 'cov_matrix.stan', line 2, column 7 to column 17, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real cov_matrix;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'cov_matrix' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc data.stan
Syntax error in 'data.stan', line 2, column 7 to column 11, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real data;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'data' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc else.stan
Syntax error in 'else.stan', line 2, column 7 to column 11, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real else;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'else' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc export.stan
Semantic error in 'export.stan', line 2, column 7 to column 13:
   -------------------------------------------------
     1:  data {
     2:    real export;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'export' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc extern.stan
Semantic error in 'extern.stan', line 2, column 7 to column 13:
   -------------------------------------------------
     1:  data {
     2:    real extern;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'extern' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc false.stan
Semantic error in 'false.stan', line 2, column 7 to column 12:
   -------------------------------------------------
     1:  data {
     2:    real false;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'false' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc for.stan
Syntax error in 'for.stan', line 2, column 7 to column 10, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real for;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'for' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc generated.stan
Semantic error in 'generated.stan', line 2, column 7 to column 16:
   -------------------------------------------------
     1:  data {
     2:    real generated;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'generated' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc if.stan
Syntax error in 'if.stan', line 2, column 7 to column 9, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real if;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'if' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc in.stan
Syntax error in 'in.stan', line 2, column 7 to column 9, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real in;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'in' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc int.stan
Syntax error in 'int.stan', line 2, column 7 to column 10, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real int;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'int' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc matrix.stan
Syntax error in 'matrix.stan', line 2, column 7 to column 13, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real matrix;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'matrix' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc model.stan
Syntax error in 'model.stan', line 2, column 7 to column 12, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real model;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'model' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc ordered.stan
Syntax error in 'ordered.stan', line 2, column 7 to column 14, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real ordered;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'ordered' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc parameters.stan
Syntax error in 'parameters.stan', line 2, column 7 to column 17, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real parameters;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'parameters' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc positive_ordered.stan
Syntax error in 'positive_ordered.stan', line 2, column 7 to column 23, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real positive_ordered;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'positive_ordered' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc quantities.stan
Semantic error in 'quantities.stan', line 2, column 7 to column 17:
   -------------------------------------------------
     1:  data {
     2:    real quantities;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'quantities' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc real.stan
Syntax error in 'real.stan', line 2, column 7 to column 11, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real real;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'real' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc repeat.stan
Semantic error in 'repeat.stan', line 2, column 7 to column 13:
   -------------------------------------------------
     1:  data {
     2:    real repeat;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'repeat' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc return.stan
Syntax error in 'return.stan', line 2, column 7 to column 13, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real return;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'return' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc row_vector.stan
Syntax error in 'row_vector.stan', line 2, column 7 to column 17, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real row_vector;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'row_vector' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc simplex.stan
Syntax error in 'simplex.stan', line 2, column 7 to column 14, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real simplex;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'simplex' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc static.stan
Semantic error in 'static.stan', line 2, column 7 to column 13:
   -------------------------------------------------
     1:  data {
     2:    real static;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'static' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc struct.stan
Semantic error in 'struct.stan', line 2, column 7 to column 13:
   -------------------------------------------------
     1:  data {
     2:    real struct;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'struct' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc then.stan
Semantic error in 'then.stan', line 2, column 7 to column 11:
   -------------------------------------------------
     1:  data {
     2:    real then;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'then' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc transformed.stan
Semantic error in 'transformed.stan', line 2, column 7 to column 18:
   -------------------------------------------------
     1:  data {
     2:    real transformed;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'transformed' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc true.stan
Semantic error in 'true.stan', line 2, column 7 to column 11:
   -------------------------------------------------
     1:  data {
     2:    real true;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'true' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc typedef.stan
Semantic error in 'typedef.stan', line 2, column 7 to column 14:
   -------------------------------------------------
     1:  data {
     2:    real typedef;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'typedef' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc unit_vector.stan
Syntax error in 'unit_vector.stan', line 2, column 7 to column 18, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real unit_vector;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'unit_vector' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc until.stan
Semantic error in 'until.stan', line 2, column 7 to column 12:
   -------------------------------------------------
     1:  data {
     2:    real until;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'until' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc var.stan
Semantic error in 'var.stan', line 2, column 7 to column 10:
   -------------------------------------------------
     1:  data {
     2:    real var;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'var' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc vector.stan
Syntax error in 'vector.stan', line 2, column 7 to column 13, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real vector;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'vector' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc void.stan
Syntax error in 'void.stan', line 2, column 7 to column 11, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real void;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'void' clashes with reserved keyword.
  $ ../../../../../install/default/bin/stanc while.stan
Syntax error in 'while.stan', line 2, column 7 to column 12, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real while;
                ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'while' clashes with reserved keyword.
